Closed
Bug 262505
Opened 21 years ago
Closed 17 years ago
image/x-ms-bmp MIME type not recognized as BMP picture
Categories
(Core :: Graphics: ImageLib, defect)
Core
Graphics: ImageLib
Tracking
()
RESOLVED
FIXED
mozilla1.9beta5
People
(Reporter: david.balazic, Assigned: sciguyryan)
References
Details
Attachments
(2 files)
|
35.04 KB,
image/x-ms-bmp
|
Details | |
|
1.41 KB,
patch
|
pavlov
:
review+
pavlov
:
superreview+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.2; rv:1.7.3) Gecko/20040913 Firefox/0.10
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.2; rv:1.7.3) Gecko/20040913 Firefox/0.10
FireFox does not recognize the MIME type image/x-ms-bmp and tries to handle the
picture with an external helper app.
Reproducible: Always
Steps to Reproduce:
Comment 1•21 years ago
|
||
*** Bug 262506 has been marked as a duplicate of this bug. ***
Comment 2•21 years ago
|
||
How do you try to open the picture? Via a <img> tag or via url-bar/File-Open File?
Comment 3•21 years ago
|
||
dupe of bug 229695 ?
needs included in MIME type tracking bug 78106
Mozilla/5.0 (Windows; U; Windows NT 5.1; es-ES; rv:1.7.5) Gecko/20041108 Firefox/1.0
Comment 5•20 years ago
|
||
This is an automated message, with ID "auto-resolve01".
This bug has had no comments for a long time. Statistically, we have found that
bug reports that have not been confirmed by a second user after three months are
highly unlikely to be the source of a fix to the code.
While your input is very important to us, our resources are limited and so we
are asking for your help in focussing our efforts. If you can still reproduce
this problem in the latest version of the product (see below for how to obtain a
copy) or, for feature requests, if it's not present in the latest version and
you still believe we should implement it, please visit the URL of this bug
(given at the top of this mail) and add a comment to that effect, giving more
reproduction information if you have it.
If it is not a problem any longer, you need take no action. If this bug is not
changed in any way in the next two weeks, it will be automatically resolved.
Thank you for your help in this matter.
The latest beta releases can be obtained from:
Firefox: http://www.mozilla.org/projects/firefox/
Thunderbird: http://www.mozilla.org/products/thunderbird/releases/1.5beta1.html
Seamonkey: http://www.mozilla.org/projects/seamonkey/
Comment 6•20 years ago
|
||
This Bug is still alive and kicking. Testfile:
http://webnews.textalk.com/upload/article/bild/7/171488/Hebbe_hund_s.bmp
Bug found in:
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1.1) Gecko/20061204 Firefox/2.0.0.1
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.2pre) Gecko/20070111 SeaMonkey/1.1
Updated•18 years ago
|
Assignee: bross2 → nobody
Component: General → ImageLib
OS: Windows Server 2003 → All
Product: Firefox → Core
QA Contact: general → imagelib
Hardware: PC → All
Version: unspecified → Trunk
Comment 8•18 years ago
|
||
< biesi> ispiked: nsImageModule doesn't have an image/x-ms-bmp entry
< biesi> which is your problem
<+ispiked> mmm
<+ispiked> should it?
< biesi> guess so
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → sciguyryan
| Assignee | ||
Comment 9•18 years ago
|
||
Patch v1.0
Attachment #279257 -
Flags: superreview?(pavlov)
Attachment #279257 -
Flags: review?(pavlov)
| Assignee | ||
Updated•18 years ago
|
Status: NEW → ASSIGNED
Comment 10•18 years ago
|
||
Comment on attachment 279257 [details] [diff] [review]
Patch v1.0
We might want to sniff for (in imgLoader::GetMimeTypeFromContent) BMPs rather than or in addition to this patch.
| Assignee | ||
Comment 11•18 years ago
|
||
(In reply to comment #10)
> (From update of attachment 279257 [details] [diff] [review])
> We might want to sniff for (in imgLoader::GetMimeTypeFromContent) BMPs rather
> than or in addition to this patch.
>
I'm not quite sure how to do that. Can you be a bit more specific (I have no knowledge of that code at all.)?
Comment 12•18 years ago
|
||
We already do:
http://lxr.mozilla.org/seamonkey/source/modules/libpr0n/src/imgLoader.cpp#776
That doesn't help when loading the URL directly though.
| Assignee | ||
Comment 13•18 years ago
|
||
(In reply to comment #12)
> We already do:
> http://lxr.mozilla.org/seamonkey/source/modules/libpr0n/src/imgLoader.cpp#776
>
> That doesn't help when loading the URL directly though.
>
Does that mean that no changes are needed there?
Comment 14•18 years ago
|
||
correct
Updated•18 years ago
|
Attachment #279257 -
Flags: superreview?(pavlov)
Attachment #279257 -
Flags: superreview+
Attachment #279257 -
Flags: review?(pavlov)
Attachment #279257 -
Flags: review+
| Assignee | ||
Updated•17 years ago
|
Attachment #279257 -
Flags: approval1.9?
Comment 15•17 years ago
|
||
Comment on attachment 279257 [details] [diff] [review]
Patch v1.0
a1.9=beltzner
Attachment #279257 -
Flags: approval1.9? → approval1.9+
Updated•17 years ago
|
Keywords: checkin-needed
Comment 16•17 years ago
|
||
Checking in modules/libpr0n/build/nsImageModule.cpp;
/cvsroot/mozilla/modules/libpr0n/build/nsImageModule.cpp,v <-- nsImageModule.cpp
new revision: 1.20; previous revision: 1.19
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta5
You need to log in
before you can comment on or make changes to this bug.
Description
•