Bug 262505 - "image/x-ms-bmp MIME type not recognized as BMP picture" [p=sciguyryan@gmail.com (Ryan Jones) r+sr=stuart a1.9=beltzner]